--- a/styles/style.css
+++ b/styles/style.css
@@ -27,10 +27,24 @@ body {
     width: 40px;
 }
 
+#google-icon {
+    height: 28px;
+    width: 28px;
+}
+
 .contribute {
     margin: 5px;
     position: absolute;
     right: 0;
+    display: block;
+    text-decoration: none;
+}
+
+.review {
+    margin: 10px;
+    position: absolute;
+    right: 0;
+    margin-right: 42px;
     display: block;
     text-decoration: none;
 }
@@ -45,8 +59,8 @@ body {
     height: auto;
 }
 
-.badge-btn{
-    width:50px;
+.badge-btn {
+    width: 50px;
 }
 
 #content {
@@ -211,13 +225,26 @@ textarea#content:focus {
     font-size: 10px;
     position: absolute;
     width: 100px;
-    right:0;
+    right: 0;
     justify-content: center;
     align-items: center;
 }
-.whats-new:hover {
+
+.whats-new,
+.rate-us:hover {
     cursor: pointer;
 }
+
+.rate-us {
+    font-size: 20px;
+    position: absolute;
+    width: 100px;
+    left: 0;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+}
+
 
 #hashcut-icon {
     width: 80px;
@@ -234,4 +261,120 @@ textarea#content:focus {
     align-items: center;
     justify-content: center;
     margin-top: 0;
+}
+
+modal-backdrop {
+    position: absolute;
+}
+
+.modal-content {
+    width: 250px;
+    height: 270px;
+    background-color: #000814;
+    margin-left: 18%;
+    margin-top: 25%;
+    border-radius: 40px;
+    position: relative;
+}
+
+
+.card1 {
+    width: 250px;
+    height: 250px;
+    border-radius: 40px;
+    box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25), -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+    cursor: pointer;
+    transition: 0.4s;
+    align-items: center;
+    border: 2px solid whitesmoke;
+    border-color: whitesmoke;
+    box-shadow: 0 0 3px whitesmoke;
+    margin-bottom: 30px;
+}
+
+.card1 .card_image {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    position: relative;
+}
+
+
+.model-text {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 2;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    color: beige;
+    margin-top: -12px;
+    opacity: 0.5;
+}
+
+.model-text:hover {
+    color: antiquewhite;
+    cursor: pointer;
+    opacity: 0.8;
+    text-decoration: underline;
+}
+
+.card1 .card_image img {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    object-fit: cover;
+}
+
+.card1 .card_title {
+    text-align: center;
+    border-radius: 0px 0px 40px 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: -130px;
+    height: 40px;
+    color: cornflowerblue;
+}
+
+.card1 .card_title:hover {
+    cursor: pointer;
+}
+
+.card1:hover {
+    transform: scale(0.9, 0.9);
+    box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+        -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+}
+
+/* .card_image:hover .btn-style {
+    display: block;
+}
+
+
+.modal-dialogue .btn-style {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    margin-left: 50px;
+}
+
+.modal-dialogue .btn-style .btn {
+    border-color: cornflowerblue;
+    color: #6002ee;
+}
+
+.modal-dialogue .btn-style .btn:hover {
+    border-color: #000819 !important;
+    background-color: cornflowerblue !important;
+    color: #000819 !important;
+} */
+
+@media all and (max-width: 500px) {
+    .card-list {
+        /* On small screens, we are no longer using row direction but column */
+        flex-direction: column;
+    }
 }
